--- a/Mirko.Universal/Mirko.Universal.csproj
+++ b/Mirko.Universal/Mirko.Universal.csproj
@@ -96,11 +96,20 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\AppHeader.xaml.cs">
+      <DependentUpon>AppHeader.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\AutoCompletingTextBox.cs" />
     <Compile Include="Controls\EdgeTappedListView.cs" />
+    <Compile Include="Controls\Entry.xaml.cs">
+      <DependentUpon>Entry.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DualHostPage.xaml.cs">
+      <DependentUpon>DualHostPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ConversationPage.xaml.cs">
       <DependentUpon>ConversationPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\InputAwarePanel.cs" />
     <Compile Include="Pages\AtNotificationsPage.xaml.cs">
       <DependentUpon>AtNotificationsPage.xaml</DependentUpon>
     </Compile>
@@ -121,6 +130,9 @@
     </Compile>
     <Compile Include="Pages\EmbedPage.xaml.cs">
       <DependentUpon>EmbedPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\EmptyPage.xaml.cs">
+      <DependentUpon>EmptyPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\EntryPage.xaml.cs">
       <DependentUpon>EntryPage.xaml</DependentUpon>
@@ -154,6 +166,7 @@
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\StatusBarManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -162,7 +175,13 @@
     <None Include="Mirko.Universal_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\appbar.code.xml.png" />
     <Content Include="Assets\appbar.eye.png" />
+    <Content Include="Assets\appbar.link.png" />
+    <Content Include="Assets\appbar.quote.png" />
+    <Content Include="Assets\appbar.smiley.glasses.png" />
+    <Content Include="Assets\appbar.text.bold.png" />
+    <Content Include="Assets\appbar.text.italic.png" />
     <Content Include="Assets\czacha.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -174,6 +193,18 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\AppHeader.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Entry.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="DualHostPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ConversationPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -205,6 +236,10 @@
     <Page Include="Pages\EmbedPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\EmptyPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\EntryPage.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -245,6 +280,12 @@
     <Page Include="Pages\SettingsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Properties\DesignTimeResources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ContainsDesignTimeResources>true</ContainsDesignTimeResources>
     </Page>
     <Page Include="Resources\Platform.xaml">
       <Generator>MSBuild:Compile</Generator>
