--- a/Mirko/Mirko.Universal/ApplicationInsights.config
+++ b/Mirko/Mirko.Universal/ApplicationInsights.config
@@ -1,3 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns = "http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
+  <InstrumentationKey>54809a7e-12c7-4051-823c-fd5cad4edfca</InstrumentationKey>
 </ApplicationInsights>
