--- a/Mirko/Mirko.Universal/Mirko.Universal.csproj
+++ b/Mirko/Mirko.Universal/Mirko.Universal.csproj
@@ -19,7 +19,7 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PackageCertificateKeyFile>Mirko.Universal_StoreKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>5C14E9DB76945CB4A6A6E2210E451FECC9BA8024</PackageCertificateThumbprint>
-    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
