--- a/Mirko/Mirko.Universal/Mirko.Universal.csproj
+++ b/Mirko/Mirko.Universal/Mirko.Universal.csproj
@@ -21,6 +21,7 @@
     <PackageCertificateThumbprint>5C14E9DB76945CB4A6A6E2210E451FECC9BA8024</PackageCertificateThumbprint>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
+    <AppxBundle>Always</AppxBundle>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
