--- a/WykopSDK/WykopSDK.csproj
+++ b/WykopSDK/WykopSDK.csproj
@@ -73,8 +73,8 @@
     <Compile Include="WykopSDK.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="AngleSharp, Version=0.8.9.38514, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AngleSharp.0.8.9\lib\portable-windows8+net45+windowsphone8+wpa\AngleSharp.dll</HintPath>
+    <Reference Include="AngleSharp, Version=0.9.3.41352, Culture=neutral, PublicKeyToken=e83494dcdc6d31ea, processorArchitecture=MSIL">
+      <HintPath>..\packages\AngleSharp.0.9.3\lib\portable-windows8+net45+windowsphone8+wpa\AngleSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MetroLog">
