--- a/Mirko/Mirko.WindowsPhone/packages.config
+++ b/Mirko/Mirko.WindowsPhone/packages.config
@@ -5,6 +5,9 @@
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="wpa81" />
   <package id="Microsoft.ApplicationInsights.PersistenceChannel" version="1.2.3" targetFramework="wpa81" />
   <package id="Microsoft.ApplicationInsights.WindowsApps" version="1.1.1" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
   <package id="MvvmLight" version="5.2.0.0" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="wpa81" />
