--- a/Mirko/Mirko.WindowsPhone/Mirko.WindowsPhone.csproj
+++ b/Mirko/Mirko.WindowsPhone/Mirko.WindowsPhone.csproj
@@ -288,6 +288,18 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FFImageLoading, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FFImageLoading.Windows.2.0.5\lib\portable-netcore45+wpa81+wp8\FFImageLoading.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FFImageLoading.Transformations, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xamarin.FFImageLoading.Transformations.2.0.0\lib\portable-netcore45+wpa81+wp8\FFImageLoading.Transformations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FFImageLoading.Windows, Version=1.0.5834.516, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FFImageLoading.Windows.2.0.5\lib\portable-netcore45+wpa81+wp8\FFImageLoading.Windows.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="GalaSoft.MvvmLight, Version=5.2.0.37222, Culture=neutral, PublicKeyToken=e7570ab207bcb616, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MvvmLightLibs.5.2.0.0\lib\wpa81\GalaSoft.MvvmLight.dll</HintPath>
       <Private>True</Private>
