Clearing and fixing pages. Add ConfigureAwait(false) here and there.

--- a/Mirko/Mirko.Universal/Mirko.Universal.csproj
+++ b/Mirko/Mirko.Universal/Mirko.Universal.csproj
@@ -171,6 +171,7 @@
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\DeviceFamilyStateTrigger.cs" />
     <Compile Include="Utils\StatusBarManager.cs" />
   </ItemGroup>
   <ItemGroup>
