--- a/BackgroundTasks/BackgroundTasks.csproj
+++ b/BackgroundTasks/BackgroundTasks.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PseudoPush.cs" />
+    <Compile Include="UpdateTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MetroLog">
